tests/semantic/fact_empty/fact_empty.err
Error: Mismatching arity of relation edge in file fact_empty.dl at line 15
edge( ).
^--------
1 errors generated, evaluation aborted
